<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.dk.pgt.iv.IvViewModel"/>
    </data>

    <merge
        android:id="@+id/form"
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <SearchView
            android:id="@+id/pokemonName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:iconifiedByDefault="false"
            android:nextFocusDown="@+id/currentCp"
            android:queryHint="@string/pokemon_name"/>

        <EditText
            android:id="@+id/currentCp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/cp"
            android:inputType="number"
            android:text="@={viewModel.currentCp}"/>

        <EditText
            android:id="@+id/currentHp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hp"
            android:inputType="number"
            android:text="@={viewModel.currentHp}"/>

        <EditText
            android:id="@+id/requiredDust"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/dust"
            android:inputType="number"
            android:text="@={viewModel.requiredDust}"/>

        <Button
            android:id="@+id/getIvButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="@{()->viewModel.calculateIvs()}"
            android:text="@string/getIv"/>
    </merge>
</layout>
